# rs_cmake

./: .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  Init.cmake  LICENSE  Readme.md  Readme.rst  bitbucket-pipelines.yml  cmake.cmake  cmake.in  environment_setup.sh
.github/ISSUE_TEMPLATE/: bug_report.md  story-definition.md
.github/workflows/: lint_docker.yml  publish_docker.yml
Modules/: CMakeDetermineVerilogCompiler.cmake  CMakeTestVerilogCompiler.cmake  CMakeVerilogCompiler.cmake.in  CMakeVerilogInformation.cmake  CTestValgrind.cmake.in  CodeCoverage.cmake  FindCCache.cmake  FindClangFormat.cmake  FindDefaultBenchmark.cmake  FindDefaultStaticAnalysis.cmake  FindDefaultTest.cmake  FindDoc.cmake  FindFormatter.cmake  FindHtmlTidy.cmake  FindJetsonL4T.cmake  FindPlantUML.cmake  FindSphinx.cmake  FindV4l2.cmake  FindVerilator.cmake  FindVerilogTest.cmake  Sanitizer.cmake
Modules/DefaultTest/: gmock_c.cmake
Modules/StaticAnalysis/: .clang-tidy.all.in  .clang-tidy.in  .clang-tidy.none.in
devtool/: CMakeLists.txt  environment_setup.sh
doc_templates/: conf.py.in  index.rst
docker/: Readme.md  Readme.rst  add-separate-alternatives.Docker
docker/docs/: Dockerfile
docker/hw-backend/: Dockerfile  base.cmake
docker/hw-dev/: Dockerfile  base.cmake  hw-base.cmake
docker/sw-aarch64-linux-gnu/: Dockerfile  aarch64-linux-gnu-gcc.toolchain.cmake  base.cmake
docker/sw-arm-none-eabi/: Dockerfile  arm-none-eabi-gcc.toolchain.cmake  base.cmake
docker/sw-dev/: Dockerfile  base.cmake  sw-base.cmake
docker/sw-esp-idf-v4.4.3/: Dockerfile  junk.sh
docker/sw-nrfconnect/: Dockerfile  arm-zephyr-eabi-gcc.toolchain.cmake  base.cmake
docs/: FlowForClangTidyCleanup.rst  Resources.rst
functions/: .clang-uml.in  AddConfiguration.cmake  CreateDepGraph.cmake  CreateVersion.cmake  FindPythonModule.cmake  GenerateUmlDocs.cmake  GitHash.cmake  MockTarget.cmake  PythonLint.cmake  PythonSetupVenv.cmake  RSVerilate.cmake  RSVerilateLib.cmake  TestTarget.cmake  UploadToRemote.cmake  version.cpp.in  version.h.in  version_c.h.in
presets/: CMakePresets-analysis.json  CMakePresets-arm-none-gcc.json  CMakePresets-common.json  CMakePresets-doc.json  CMakePresets-native-clang.json  CMakePresets-native-gcc.json
toolchain/: aarch-linux-gnu-jetson-gcc.toolchain.cmake  arm-clang.toolchain.cmake  arm-gcc.toolchain.cmake  arm-linux-gunueabi-gcc.toolchain.cmake  arm-none-eabi-gcc.toolchain.cmake  clang.toolchain.cmake  gcc.toolchain.cmake
